--- a/source/composer.json
+++ b/source/composer.json
@@ -18,6 +18,7 @@
         "slim/slim": "2.*",
         "slim/views": "0.*",
         "twig/twig": "1.*",
-        "twig/extensions": "^1.3"
+        "twig/extensions": "^1.3",
+        "catfan/Medoo": "^1.0"
     }
 }
