--- a/source/composer.json
+++ b/source/composer.json
@@ -19,6 +19,8 @@
         "slim/views": "0.*",
         "twig/twig": "1.*",
         "twig/extensions": "^1.3",
-        "catfan/Medoo": "^1.0"
+        "catfan/Medoo": "^1.0",
+        "respect/validation": "^1.1",
+        "phpmailer/phpmailer": "^5.2"
     }
 }
